Updated most of content

--- a/public/scissors.html
+++ b/public/scissors.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+
+<html>
+
+<head>
+    <title>You played scissors!</title>
+    <meta charset="utf-8">
+</head>
+
+<body>
 <div><a href="/rock.html">Play Rock</a></div> 
 <div><a href="/paper.html">Play Paper</a></div> 
 <div><a href="/scissors.html">Play Scissors</a></div> 
@@ -9,3 +19,5 @@
 <h2>We won!</h2>
 
 <div><a href="/">Rules</a></div>
+</body>
+</html>
