--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,11 @@
     <div><a href="/rock.html">Play Rock</a></div> 
     <div><a href="/paper.html">Play Paper</a></div> 
     <div><a href="/scissors.html">Play Scissors</a></div> 
+
     <h1>Welcome to Rock-Paper-Scissors!</h1>
 
     <p>
-        From <a href="https://en.wikipedia.org/wiki/Rock%E2%80%93paper%E2%80%93scissors">Wikipedia</a>:
+        From <a href="https://en.wikipedia.org/wiki/Rock%E2%80%93paper%E2%80%93scissors" target="_blank">Wikipedia</a>:
     </p>
 
     <p>
@@ -37,7 +38,7 @@
     <table border="1">
         <tr>
             <td colspan="2" rowspan="2"></td>
-            <td colspan ="3">and they play</td>
+            <td colspan ="3">and they play...</td>
         </tr>
         <tr>
             <td>Rock</td>
@@ -73,10 +74,10 @@
     <p>A chart showing how the three game elements interact</p>
 
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Kitsune-ken_%28%E7%8B%90%E6%8B%B3%29%2C_Japanese_rock-paper-scissors_variant%2C_from_the_Genyoku_sui_bento_%281774%29.jpg/640px-Kitsune-ken_%28%E7%8B%90%E6%8B%B3%29%2C_Japanese_rock-paper-scissors_variant%2C_from_the_Genyoku_sui_bento_%281774%29.jpg">
-    <p>Kitsune-ken was a popular Japanse rock-paper-scissors variant.</p>
+    <p>Kitsune-ken was a popular Japanese rock–paper–scissors variant.</p>
 
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ae/Mushi-ken_%28%E8%99%AB%E6%8B%B3%29%2C_Japanese_rock-paper-scissors_variant%2C_from_the_Kensarae_sumai_zue_%281809%29.jpg/640px-Mushi-ken_%28%E8%99%AB%E6%8B%B3%29%2C_Japanese_rock-paper-scissors_variant%2C_from_the_Kensarae_sumai_zue_%281809%29.jpg">
-    <p>Mushi-ken, the earliest Japanese sansukumi-ken game (1809). From left to right: slug (namekuji), frog (kawazu), and snake (hebi).</p>
+    <p>Mushi-ken, the earliest Japanese sansukumi-ken game (1809). From left to right: slug (namekuji), frog (kawazu) and snake (hebi).</p>
 </body>
 
 </html>
